Fixed z-index issue and canvas for coin animations being way taller than needed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,14 +14,16 @@ p {
 }
 
 #coinCanvasContainer {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   opacity: .2;
-  z-index: -1;
+  z-index: 1;
 }
+
+
 
 .section {
   padding-top: 100px;
@@ -83,26 +85,6 @@ p {
   -webkit-transform: translate3d(0, -5px, 0);
   transform: translate3d(0, -5px, 0);
   background-color: #081828;
-}
-
-/* Overlay */
-.overlay {
-  position: relative;
-  z-index: 1;
-}
-
-.overlay::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.4;
-  background: #081828;
-  content: "";
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  z-index: -1;
 }
 
 
@@ -554,7 +536,6 @@ p {
   position: relative;
   padding: 180px 0 120px 0;
   background: black;
-  z-index: -2;
 }
 
 .hero-image {
